<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/base_x4"
    android:paddingLeft="@dimen/base_x4"
    android:paddingEnd="@dimen/base_x4"
    android:paddingRight="@dimen/base_x4"
    android:paddingTop="@dimen/base_x2"
    android:paddingBottom="@dimen/base_x2">

    <TextView
        android:id="@+id/weightHintTextView"
        style="@style/Body.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_x2"
        android:layout_marginStart="@dimen/base_x3"
        android:layout_marginLeft="@dimen/base_x3"
        android:text="@string/weight"
        app:layout_constraintStart_toEndOf="@+id/photoImageView"
        app:layout_constraintTop_toTopOf="@+id/photoImageView" />

    <TextView
        android:id="@+id/weightTextView"
        style="@style/Body.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/weightHintTextView"
        app:layout_constraintTop_toBottomOf="@+id/weightHintTextView"
        tools:text="200lb" />

    <TextView
        android:id="@+id/dobHintTextView"
        style="@style/Body.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_x3"
        android:layout_marginLeft="@dimen/base_x3"
        android:text="@string/dob"
        app:layout_constraintStart_toEndOf="@+id/photoImageView"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView" />

    <TextView
        android:id="@+id/dobTextView"
        style="@style/Body.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/dobHintTextView"
        app:layout_constraintTop_toBottomOf="@+id/dobHintTextView"
        tools:text="May 15, 1999" />

    <Button
        android:id="@+id/editButton"
        style="@style/Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:paddingStart="@dimen/edit_padding_start"
        android:paddingLeft="@dimen/edit_padding_start"
        app:layout_constraintStart_toStartOf="@+id/dobHintTextView"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="@dimen/photo_width"
        android:layout_height="@dimen/photo_height"
        android:contentDescription="@null"
        android:src="@drawable/ic_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>